# zed

./: Cargo.toml  Makefile  Pipfile
crates/assistant/src/: assistant.rs  completion_provider.rs
crates/assistant2/src/: assistant2.rs
crates/jupyter/: Cargo.toml  Pipfile  test_server.py
crates/jupyter/src/: jupyter.rs
crates/language/src/: language.rs
crates/languages/src/: lib.rs
crates/notebook/: Cargo.toml  Pipfile  pyproject.toml  test_server.py
crates/notebook/src/: actions.rs  cell.rs  chat.rs  common.rs  editor.rs  kernel.rs  notebook.rs
crates/notebook/src/jupyter/: connection.py  message.py  message.rs  mod.rs  python.rs
crates/open_ai/src/: open_ai.rs
crates/project/src/: project.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
