[package]
name = "notebook"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
path = "src/notebook.rs"
doctest = false

[dependencies]
# async-trait = { workspace = true, "optional" = true }
# regex.workspace = true
anyhow.workspace = true
async-compat = { version = "0.2.1", "optional" = true }
collections.workspace = true
command_palette_hooks.workspace = true
editor.workspace = true
gpui.workspace = true
itertools.workspace = true
language.workspace = true
languages.workspace = true
log.workspace = true
multi_buffer.workspace = true
project.workspace = true
regex.workspace = true
rope.workspace = true
rpc.workspace = true
runtimelib = { git = "https://github.com/runtimed/runtimed", version = "0.1.0" }
schemars.workspace = true
search.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
settings.workspace = true
sum_tree.workspace = true
text.workspace = true
theme.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tree-sitter-python = { workspace = true }
tree-sitter.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
worktree.workspace = true
zed_actions.workspace = true

[dev-dependencies]
command_palette.workspace = true
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
release_channel.workspace = true
indoc.workspace = true
language = { workspace = true, features = ["test-support"] }
lsp = { workspace = true, features = ["test-support"] }
parking_lot.workspace = true
settings.workspace = true
util = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
