[package]
name = "notebook"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
path = "src/notebook.rs"
doctest = false

[dependencies]
anyhow.workspace = true
assistant.workspace = true
collections.workspace = true
command_palette_hooks.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
itertools.workspace = true
language.workspace = true
languages.workspace = true
log.workspace = true
multi_buffer.workspace = true
open_ai.workspace = true
project.workspace = true
pyo3 = { version = "0.21.2", features = ["experimental-async"] }
regex.workspace = true
rope.workspace = true
rpc.workspace = true
runtimelib = { git = "https://github.com/runtimed/runtimed", version = "0.1.0" }
search.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
sum_tree.workspace = true
text.workspace = true
theme.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tree-sitter-python = { workspace = true }
tree-sitter.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
worktree.workspace = true
zed_actions.workspace = true
